--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ li {
     padding-left: 10px;
     color: #5f564d;
     line-height: 150%;
+}
 
 li + li {
     margin-top: 8px;
@@ -139,12 +140,12 @@ tr + tr td {
     padding-block: 12px;
 }
 
-tr:ath-of-type(1) th, 
-tr:ath-of-type(1) td {
+tr:nth-of-type(1) th, 
+tr:nth-of-type(1) td {
     padding-bottom: 12px;
 }
 
-tr:ath-of-type(4) th,
-tr:ath-of-type(4) td {
+tr:nth-of-type(4) th,
+tr:nth-of-type(4) td {
     border: none;
 }
